--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,38 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <baseUrl>${baseUrl}</baseUrl>
+                        <logFilePath>${project.basedir}/log/RestfulbookerApiAutomationTest.log</logFilePath>
+                        <testDataFilePath>${project.basedir}/src/test/resources/restful-booker/</testDataFilePath>
+                    </systemPropertyVariables>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>
+                            ${project.basedir}/src/test/resources/suites/restfulBookerApi-${suite}.xml
+                        </suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <baseUrl>https://restful-booker.herokuapp.com</baseUrl>
+            </properties>
+        </profile>
+    </profiles>
+
+    <dependencies>
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
